# game-play

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .npmrc  BEVY_PLATFORM_INTEGRATION_PATTERN.md  CLAUDE.md  Dockerfile  Dockerfile.android  README.md  build-android.sh  capacitor.config.ts  critter-keeper  deploy-pages.js  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  quasar.config.ts  tsconfig.json  wrangler.toml
.github/workflows/: build-and-deploy.yml  ci-cd.yml  ci.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
certs/: app4.dog+1-key.pem  app4.dog+1.pem  play.app4.dog-key.pem  play.app4.dog.pem
game-engine/: Cargo.toml  build.rs
game-engine/src/: audio.rs  camera.rs  components.rs  events.rs  game.rs  lib.rs  resources.rs  systems.rs
game-engine/tests/: coordinate_logic.rs  sprite_animation.rs
game-engine/website/dog.app4.website/public/: critters
public/: critters
public/assets/: README.md
public/critters/: bouncy_bunny.ron  catalog.ron  chirpy_bird.ron
public/game-engine/: .gitignore  app4dog_game_engine.d.ts  app4dog_game_engine.js  app4dog_game_engine_bg.wasm.d.ts  package.json
public/wasm/: critter_keeper_bg.wasm
scripts/: build-wasm.sh  deploy.sh  fix-plugin-vue-types.cjs  r2-sync.sh
src/: env.d.ts
src-capacitor/: capacitor.config.json  package.json  pnpm-lock.yaml
src/components/: GameCanvas.vue  (+5 more)
tests/: README.md  critter-id-mapping.test.js  critter-integration.test.js  grid-coordinates.test.js  package-lock.json  package.json  wasm-critter-api.test.js
(+18 files in other folders)
